@startuml

title __APP's Class Diagram__\n

  package com.example.furkan.seproject {
    class BuildConfig {
    }
  }
  

  package com.example.furkan.seproject {
    class ExampleInstrumentedTest {
    }
  }
  

  package com.example.furkan.seproject {
    class GetRoutesFromTrafi {
    }
  }
  

  package com.example.furkan.seproject {
    class JsonReader {
    }
  }
  

  package com.example.furkan.seproject {
    class MainActivity {
    }
  }
  

  package com.example.furkan.seproject {
    class PolylineEncoding {
    }
  }
  

  package android.support.graphics.drawable {
    class R {
    }
  }
  

  package android.support.fragment {
    class R {
    }
  }
  

  package android.support.swiperefreshlayout {
    class R {
    }
  }
  

  package timber.log {
    class R {
    }
  }
  

  package com.example.furkan.seproject {
    class R {
    }
  }
  

  package android.support.coordinatorlayout {
    class R {
    }
  }
  

  package android.support.v7.viewpager {
    class R {
    }
  }
  

  package android.arch.lifecycle {
    package android.arch.lifecycle.livedata {
      package android.arch.lifecycle.livedata.core {
        class R {
        }
      }
    }
  }
  

  package android.arch.lifecycle {
    package android.arch.lifecycle.viewmodel {
      class R {
      }
    }
  }
  

  package android.support.design {
    class R {
    }
  }
  

  package android.support.transition {
    class R {
    }
  }
  

  package androidx.versionedparcelable {
    class R {
    }
  }
  

  package com.mapbox.android.telemetry {
    class R {
    }
  }
  

  package android.support.documentfile {
    class R {
    }
  }
  

  package android.support.coreui {
    class R {
    }
  }
  

  package android.support.v7.appcompat {
    class R {
    }
  }
  

  package android.support.drawerlayout {
    class R {
    }
  }
  

  package android.arch.lifecycle {
    class R {
    }
  }
  

  package android.support.compat {
    class R {
    }
  }
  

  package android.support.localbroadcastmanager {
    class R {
    }
  }
  

  package android.support.loader {
    class R {
    }
  }
  

  package android.support.constraint {
    class R {
    }
  }
  

  package com.mapbox.android.core {
    class R {
    }
  }
  

  package android.support.coreutils {
    class R {
    }
  }
  

  package android.support.slidingpanelayout {
    class R {
    }
  }
  

  package android.arch.lifecycle {
    package android.arch.lifecycle.extensions {
      class R {
      }
    }
  }
  

  package android.support.interpolator {
    class R {
    }
  }
  

  package android.support.customview {
    class R {
    }
  }
  

  package com.mapbox.android.gestures {
    class R {
    }
  }
  

  package android.support.asynclayoutinflater {
    class R {
    }
  }
  

  package android.support.cursoradapter {
    class R {
    }
  }
  

  package android.support.v7.recyclerview {
    class R {
    }
  }
  

  package android.support.print {
    class R {
    }
  }
  

  package android.arch.core {
    class R {
    }
  }
  

  package com.mapbox.mapboxsdk {
    class R {
    }
  }
  

  package android.arch.lifecycle {
    package android.arch.lifecycle.livedata {
      class R {
      }
    }
  }
  

  package android.support.v7.cardview {
    class R {
    }
  }
  

  package com.example.furkan.seproject {
    class RouteFinder {
    }
  }
  

  package com.example.furkan.seproject {
    class RouteListActivity {
    }
  }
  

  package com.example.furkan.seproject {
    class SelectStartEndActivity {
    }
  }
  

  JsonReader -up-|> AsyncTask
  MainActivity -up-|> OnMapReadyCallback
  MainActivity -up-|> AppCompatActivity
  RouteListActivity -up-|> AppCompatActivity
  SelectStartEndActivity -up-|> OnMapReadyCallback
  SelectStartEndActivity -up-|> OnMapClickListener
  SelectStartEndActivity -up-|> AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
